[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "redsession"
authors = [{ name = "TheJecksMan" }]
description = "Simple and fastest library for Redis server sessions"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]
dynamic = ["version"]

dependencies = [
    "starlette>=0.27.0",
    "itsdangerous>=2.1.2",
    "redis[hiredis]>=4.6.0",
    "orjson>=3.9.0",
]

[project.urls]
Repository = "https://github.com/TheJecksMan/red-session"
Docs = "https://red-session.readthedocs.io/en/stable/"


[tool.hatch.version]
path = "redsession/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs", "/examples"]
